--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -11,9 +11,9 @@
     <a data-toggle="dropdown" ngbDropdownToggle>
       <i class=" fa fa-cog fa-2x"> </i>
     </a>
-    <ul ngbDropdownMenu>
+    <!--<ul ngbDropdownMenu>
       <li class=" header-title">CONTACTANOS</li>
-      <!--<li class=" adjustments-line">
+      <li class=" adjustments-line">
         <a class=" switch-trigger background-color" href="javascript:void(0)">
           <div class=" badge-colors text-center">
             <span
@@ -32,7 +32,7 @@
           </div>
           <div class=" clearfix"></div>
         </a>
-      </li>-->
+      </li>
       <div class="content">
         <div class=" row">
           <div class="col-lg-4 col-md-4 col-sm-4 col-4"></div>
@@ -51,6 +51,6 @@
         </div>
       </div>
       
-    </ul>
+    </ul>-->
   </div>
 </div>
