--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -318,7 +318,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-12">
       <div class=" card">
         <div class=" card-header">
-          <h4 class=" card-title">{{NombreTabla}}</h4>
+          <h4 class=" card-title"><b>{{NombreTabla}}</b></h4>
         </div>
         <div class=" card-body">
           <div class=" table-responsive">
