Detalle de competiciones

--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -37,7 +37,7 @@
             </span> 
             <br>
             <span align="justify">
-              <b>2.</b> Matemáticamente se establece que por cada 4 participantes es 1 puesto de premio con un tope de 5 participantes premiados.
+              <b>2.</b> Matemáticamente se establece que por cada 4 participantes se establece un puesto de premiado con un tope de 5 participantes premiados.
             </span>
             <br>
             <span align="justify">
