--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,44 +1,167 @@
-
 <div class=" content">
   <div class="row">
-    <div class="leftcolumn">
-      <div class="card">
-        <h2>TITLE HEADING</h2>
-        <h5>Title description, Dec 7, 2017</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p>Some text..</p>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+      <div class="leftcolumn">
+        <div class="card">
+          <h2>Champions League 19-20</h2>
+          <h5>Jun 25, 2019 - Ago 23, 2020. Edic. 65</h5>
+          <div class="fakeimg">
+            <div class="section" id="carousel">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-12">
+                        <ngb-carousel>
+                            <ng-template ngbSlide>
+                              <img class="d-block" src="assets/img/theme/torneo/bg1.jpg" alt="First slide">
+                              <div class="carousel-caption d-none d-md-block">
+                                  <!--<h5>Nature, United States</h5>-->
+                              </div>
+                            </ng-template>
+                            <ng-template ngbSlide>
+                              <img class="d-block" src="assets/img/theme/torneo/bg3.jpg" alt="Second slide">
+                              <div class="carousel-caption d-none d-md-block">
+                                  <!--<h5>Somewhere Beyond, United States</h5>-->
+                              </div>
+                            </ng-template>
+                            <ng-template ngbSlide>
+                              <img class="d-block" src="assets/img/theme/torneo/bg4.jpg" alt="Third slide">
+                              <div class="carousel-caption d-none d-md-block">
+                                  <!--<h5>Yellowstone National Park, United States</h5>-->
+                              </div>
+                            </ng-template>
+                        </ngb-carousel>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          </div>
+          <br>
+          <h5>Final Estádio da Luz.</h5>
+          <h5>F. C. Bayern <b> 1 - 0 </b> París Saint-Germain F. C.</h5>
+          <hr>
+          <ul class="list-group">
+            <li class="list-group-item-medallas d-flex justify-content-between align-items-center logo-img-medalla">
+              Vengonzalez
+              <img class="d-block" src="../../../assets/img/theme/medallaOro.png" alt="Third slide">
+            </li>
+            <li class="list-group-item-medallas d-flex justify-content-between align-items-center logo-img-medalla">
+              Ildemaro14
+              <img class="d-block" src="../../../assets/img/theme/medallaPlata.png" alt="Third slide">
+            </li>
+            <li class="list-group-item-medallas d-flex justify-content-between align-items-center logo-img-medalla">
+              Chander
+              <img class="d-block" src="../../../assets/img/theme/medallaBronce.png" alt="Third slide">
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="card">
-        <h2>TITLE HEADING</h2>
-        <h5>Title description, Sep 2, 2017</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p>Some text..</p>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <div class="leftcolumn">
+        <div class="card">
+          <h2>Champions League 20-21</h2>
+          <h5>Ago 8, 2020 - May 29, 2021. Edic. 66</h5>
+          <div class="fakeimg">
+            <div class="section" id="carousel">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-12">
+                        <ngb-carousel>
+                            <ng-template ngbSlide>
+                              <img class="d-block" src="assets/img/theme/torneo/bg1.jpg" alt="First slide">
+                              <div class="carousel-caption d-none d-md-block">
+                                  <!--<h5>Nature, United States</h5>-->
+                              </div>
+                            </ng-template>
+                            <ng-template ngbSlide>
+                              <img class="d-block" src="assets/img/theme/torneo/bg3.jpg" alt="Second slide">
+                              <div class="carousel-caption d-none d-md-block">
+                                  <!--<h5>Somewhere Beyond, United States</h5>-->
+                              </div>
+                            </ng-template>
+                            <ng-template ngbSlide>
+                              <img class="d-block" src="assets/img/theme/torneo/bg4.jpg" alt="Third slide">
+                              <div class="carousel-caption d-none d-md-block">
+                                  <!--<h5>Yellowstone National Park, United States</h5>-->
+                              </div>
+                            </ng-template>
+                        </ngb-carousel>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          </div>
+          <br>
+          <h5>Final Estadio Olímpico Atatürk.</h5>
+          <h5>Chelsea F. C. <b> 1 - 0 </b> Manchester City F. C.</h5>
+          <hr>
+          <ul class="list-group">
+            <li class="list-group-item-medallas d-flex justify-content-between align-items-center logo-img-medalla">
+              Vengonzalez
+              <img class="d-block" src="../../../assets/img/theme/medallaOro.png" alt="Third slide">
+            </li>
+            <li class="list-group-item-medallas d-flex justify-content-between align-items-center logo-img-medalla">
+              Ildemaro14
+              <img class="d-block" src="../../../assets/img/theme/medallaPlata.png" alt="Third slide">
+            </li>
+            <li class="list-group-item-medallas d-flex justify-content-between align-items-center logo-img-medalla">
+              Chander
+              <img class="d-block" src="../../../assets/img/theme/medallaBronce.png" alt="Third slide">
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="card">
-        <h2>TITLE HEADING</h2>
-        <h5>Title description, Sep 2, 2017</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p>Some text..</p>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      </div>
-    </div>
-    <div class="rightcolumn">
-      <div class="card">
-        <h2>About Me</h2>
-        <div class="fakeimg" style="height:100px;">Image</div>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      </div>
-      <div class="card">
-        <h3>Popular Post</h3>
-        <div class="fakeimg">Image</div><br>
-        <div class="fakeimg">Image</div><br>
-        <div class="fakeimg">Image</div>
-      </div>
-      <div class="card">
-        <h3>Follow Me</h3>
-        <p>Some text..</p>
+      <div class="leftcolumn">
+        <div class="card">
+          <h2>Euro 2020</h2>
+          <h5>Jun 11, 2021 - Jul 11, 2021. Edic. 16</h5>
+          <div class="fakeimg">
+            <div class="section" id="carousel">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-12">
+                        <ngb-carousel>
+                            <ng-template ngbSlide>
+                              <img class="d-block" src="assets/img/theme/torneo/bg1.jpg" alt="First slide">
+                              <div class="carousel-caption d-none d-md-block">
+                                  <!--<h5>Nature, United States</h5>-->
+                              </div>
+                            </ng-template>
+                            <ng-template ngbSlide>
+                              <img class="d-block" src="assets/img/theme/torneo/bg3.jpg" alt="Second slide">
+                              <div class="carousel-caption d-none d-md-block">
+                                  <!--<h5>Somewhere Beyond, United States</h5>-->
+                              </div>
+                            </ng-template>
+                            <ng-template ngbSlide>
+                              <img class="d-block" src="assets/img/theme/torneo/bg4.jpg" alt="Third slide">
+                              <div class="carousel-caption d-none d-md-block">
+                                  <!--<h5>Yellowstone National Park, United States</h5>-->
+                              </div>
+                            </ng-template>
+                        </ngb-carousel>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          </div>
+          <br>
+          <h5>Final Wembley Stadium.</h5>
+          <h5>Italia <b> 1 - 1 </b> Inglaterra / Penales <b>3 - 2</b></h5>
+          <hr>
+          <ul class="list-group">
+            <li class="list-group-item-medallas d-flex justify-content-between align-items-center logo-img-medalla">
+              Vengonzalez
+              <img class="d-block" src="../../../assets/img/theme/medallaOro.png" alt="Third slide">
+            </li>
+            <li class="list-group-item-medallas d-flex justify-content-between align-items-center logo-img-medalla">
+              Ildemaro14
+              <img class="d-block" src="../../../assets/img/theme/medallaPlata.png" alt="Third slide">
+            </li>
+            <li class="list-group-item-medallas d-flex justify-content-between align-items-center logo-img-medalla">
+              Chander
+              <img class="d-block" src="../../../assets/img/theme/medallaBronce.png" alt="Third slide">
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
