--- a/src/assets/scss/black-dashboard/bootstrap/_card.scss
+++ b/src/assets/scss/black-dashboard/bootstrap/_card.scss
@@ -10,6 +10,8 @@
   word-wrap: break-word;
   background-color: $card-bg;
   background-clip: border-box;
+  padding: 20px;
+  margin-top: 20px;
   border: $card-border-width solid $card-border-color;
   @include border-radius($card-border-radius);
 
