--- a/src/assets/scss/black-dashboard/custom/_type.scss
+++ b/src/assets/scss/black-dashboard/custom/_type.scss
@@ -168,7 +168,7 @@ pre{
 }
 
 hr{
-  border-top: 1px solid rgba(0,0,0,0.1);
+  border-top: 1px solid #fff;
   margin-top: $spacer;
   margin-bottom: $spacer;
 }
